fix: options for professor, and now upload professor info