@@ -1,30 +1,28 @@
 package com.pdg.sigma.service;
 
+import java.util.List;
+import java.util.Optional;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import com.pdg.sigma.repository.MonitorRepository;
-import com.pdg.sigma.repository.ProfessorRepository;
 import com.pdg.sigma.domain.Course;
 import com.pdg.sigma.domain.CourseProfessor;
-import com.pdg.sigma.domain.Monitoring;
-import com.pdg.sigma.domain.MonitoringMonitor;
 import com.pdg.sigma.domain.Professor;
 import com.pdg.sigma.dto.UpdateRequestDTO;
 import com.pdg.sigma.repository.CourseProfessorRepository;
 import com.pdg.sigma.repository.CourseRepository;
+import com.pdg.sigma.repository.MonitorRepository;
 import com.pdg.sigma.repository.MonitoringMonitorRepository;
 import com.pdg.sigma.repository.MonitoringRepository;
+import com.pdg.sigma.repository.ProfessorRepository;
 
 @Service
 public class DataSyncService {
+
+    private final String EXTERNAL_API_BASE_URL = "http://localhost:5431/api";
 
     private final ProfessorRepository professorRepository;
     private final CourseProfessorRepository courseProfessorRepository;
@@ -73,7 +71,8 @@ public class DataSyncService {
         }
         
         for (Professor professor : professors) {
-            String url = "http://localhost:5431/api/courses/byProfessor/" + professor.getId();
+            syncProfessors(professor.getId());
+            String url = EXTERNAL_API_BASE_URL + "/courses/byProfessor/" + professor.getId();
             Course[] newCoursesArray = restTemplate.getForObject(url, Course[].class);
             if (newCoursesArray == null) continue;
             List<Course> newCourses = List.of(newCoursesArray);
@@ -113,52 +112,75 @@ public class DataSyncService {
     
     private void updateNewSemester(Professor professor, List<Course> newCourses, List<CourseProfessor> currentRelations) {
         List<Course> currentCourses = currentRelations.stream()
-            .map(CourseProfessor::getCourse)
-            .toList(); 
+                .map(CourseProfessor::getCourse)
+                .toList();
+        System.out.println("Cursos actuales asociados al profesor: " + currentCourses.stream().map(Course::getId).collect(java.util.stream.Collectors.toList()));
+        System.out.println("Cursos obtenidos de la API: " + newCourses.stream().map(Course::getId).collect(java.util.stream.Collectors.toList()));
     
-        List<Course> coursesToDelete = currentCourses.stream()
-            .filter(course -> newCourses.stream().noneMatch(newCourse -> newCourse.getId().equals(course.getId())))
-            .toList(); // cursos q no estan
-    
-        for (Course course : currentCourses) {
-        monitoringRepository.findByCourse(course).ifPresent(monitoring -> {
-            monitoringMonitorRepository.deleteByMonitoring(monitoring); // Borra los monitores del curso
+        monitoringRepository.findByProfessor(professor).forEach(monitoring -> {
+            monitoringMonitorRepository.deleteByMonitoring(monitoring); 
         });
-    }
-        for (Course course : coursesToDelete) {
+    
+        List<Course> coursesNoLongerAssociated = currentCourses.stream()
+                .filter(course -> newCourses.stream().noneMatch(newCourse -> newCourse.getId().equals(course.getId())))
+                .toList();
+
+        coursesNoLongerAssociated.forEach(course -> {
+            System.out.println("Procesando curso que ya no está asociado: ID " + course.getId() + ", Nombre: " + course.getName());
             monitoringRepository.findByCourse(course).ifPresent(monitoring -> {
-                // Borrar relaciones con monitores
-                monitoringMonitorRepository.deleteByMonitoring(monitoring);
-                // Borrar la monitoría
-                monitoringRepository.delete(monitoring);
+                System.out.println("  Encontrada monitoría ID: " + monitoring.getId() + " para el curso ID: " + course.getId());
+                monitoringMonitorRepository.deleteByMonitoring(monitoring); // Borra los monitores del curso
+                System.out.println("  Monitores de la monitoría ID: " + monitoring.getId() + " eliminados.");
+                monitoringRepository.delete(monitoring); // Borra la monitoría del curso
+                System.out.println("  Monitoría ID: " + monitoring.getId() + " eliminada para el curso ID: " + course.getId());
+            });
+            courseProfessorRepository.deleteByCourseAndProfessor(course, professor);
+            System.out.println("  Relación CourseProfessor para el curso ID: " + course.getId() + " y el profesor ID: " + professor.getId() + " eliminada.");
+        });
+    
+        for (Course newCourse : newCourses) {
+            Course courseToAdd = courseRepository.findById(newCourse.getId()).orElseGet(() -> {
+                Course newCreatedCourse = new Course();
+                newCreatedCourse.setId(newCourse.getId());
+                newCreatedCourse.setName(newCourse.getName());
+                newCreatedCourse.setProgram(newCourse.getProgram());
+                Course savedCourse = courseRepository.save(newCreatedCourse);
+                System.out.println("  Curso ID: " + savedCourse.getId() + " creado y guardado.");
+                return savedCourse;
             });
     
-        // Borrar CourseProfessor con estos cursos
-        courseProfessorRepository.deleteByCourseAndProfessor(course, professor);
+            boolean alreadyAssociated = currentCourses.stream().anyMatch(course -> course.getId().equals(courseToAdd.getId()));
+            if (!alreadyAssociated) {
+                CourseProfessor newRelation = new CourseProfessor();
+                newRelation.setCourse(courseToAdd);
+                newRelation.setProfessor(professor);
+                courseProfessorRepository.save(newRelation);
+                System.out.println("  Relación CourseProfessor creada para el curso ID: " + courseToAdd.getId() + " y el profesor ID: " + professor.getId() + ".");
+            } 
         }
-
-        for (Course newCourse : newCourses) {
-        Course courseToAdd = courseRepository.findById(newCourse.getId()).orElseGet(() -> {
-            // Si el curso no existe, se crea
-            Course newCreatedCourse = new Course();
-            newCreatedCourse.setId(newCourse.getId());
-            newCreatedCourse.setName(newCourse.getName());
-            newCreatedCourse.setProgram(newCourse.getProgram());
-            return courseRepository.save(newCreatedCourse);
-        });
-
-        // Relacion
-        if (currentCourses.stream().noneMatch(course -> course.getId().equals(courseToAdd.getId()))) {
-            CourseProfessor newRelation = new CourseProfessor();
-            newRelation.setCourse(courseToAdd);
-            newRelation.setProfessor(professor);
-            courseProfessorRepository.save(newRelation);
-        }
-    }
     }
     
     private Course findCourseById(List<Course> courses, Long courseId) {
         return courses.stream().filter(course -> course.getId().equals(courseId)).findFirst().orElse(null);
+    }
+
+    public void syncProfessors(String professorId) {
+        if (professorId == null || professorId.isEmpty()) {
+            return ;
+        }
+
+        String url = EXTERNAL_API_BASE_URL + "/professors/" + professorId;
+        Professor externalProfessor = restTemplate.getForObject(url, Professor.class);
+          
+        if (externalProfessor != null) {
+            
+            if (!professorRepository.existsById(externalProfessor.getId())) {
+                professorRepository.save(externalProfessor);
+            } else {
+                professorRepository.save(externalProfessor); // Actualiza
+            }
+        } 
+    
     }
 }
 
